2014-09-20  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_LIB_RULES:
	honor install.libs in misc-directory even if install.data is not used

	* AcSplit/CF_SRC_MODULES: misc-directory always has a makefile

2014-09-19  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_INCLUDE_DIRS:
	remove the (1997-era) chunk which sets -I/usr/include, etc., since it seems
	that none of my programs rely upon it.  However, the report which pointed
	this out (Gentoo #522586) is itself relying upon a defective ebuild.

2014-09-01  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_XOPEN_SOURCE:
	add case for UnixWare (report/discussion with Mark Ryan)

	* config.sub: 2014-07-28

2014-08-02  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_GNATPREP_OPT_T: ci-aclocal generated header

2014-07-26  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_INCLUDE_DIRS:
	when srcdir isn't ".", add srcdir to the include-options after ".",
	just like the include vs srcdir/include

2014-07-23  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_XOPEN_SOURCE:
	Minix3.2 ifdef's the POSIX.1-2001 functions inside _NETBSD_SOURCE, even
	though it was released 2012-02-29 - appease it.  At the same time, turn
	on the verbose flag to show that most platforms need platform-specific
	define's to get POSIX (sic).

2014-07-22  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_GETOPT_HEADER:
	add NEED_GETOPT_H definition, since that's the only interesting special case

	* AcSplit/CF_ADD_CFLAGS, AcSplit/CF_CHECK_CFLAGS, AcSplit/CF_WITH_PERL:
	workaround for ash-shell

2014-07-21  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_INSTALL_OPTS, AcSplit/CF_INSTALL_OPT_O, AcSplit/CF_INSTALL_OPT_S:
	ci-aclocal generated header

	* AcSplit/CF_AUTO_SYMLINK:
	MINIX3.2's Ash dequotes too early to pass tokens without guarding...

	* AcSplit/CF_WITH_SYMLINK: tweak needed for MINIX3.2 Ash

	* AcSplit/CF_LEX_STATES: