@@ -1,4 +1,4 @@
-MANIFEST for my-autoconf, version t20140925
+MANIFEST for my-autoconf, version t20141102
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice
@@ -9,6 +9,8 @@ config.guess                    autoconf's config.guess
 config.sub                      autoconf's config.sub
 headers-sh                      utility for installing/transforming header files
 install-sh                      generic install-script
+install.sh                      alternate install-script
+mkdirs.sh                       generic mkdirs script
 AcSplit                         subdirectory
 AcSplit/AC_ISC_POSIX            from gettext 0.10.40 (tin)
 AcSplit/AM_GNU_GETTEXT          macro to test for GNU gettext
@@ -477,6 +479,7 @@ AcSplit/CF_WITH_DESKTOP_CATEGORY  check for desktop-category
 AcSplit/CF_WITH_DFTENV          inherit/override environment variable with command-option
 AcSplit/CF_WITH_DMALLOC         configure with dmalloc (add)
 AcSplit/CF_WITH_ENCODINGS_DIR   the --with-encodings-dir option
+AcSplit/CF_WITH_EXPORT_SYMS     option --with-export-syms
 AcSplit/CF_WITH_GPM             command-line options for gpm
 AcSplit/CF_WITH_ICONDIR         handle --with-icondir option
 AcSplit/CF_WITH_ICON_NAME       configure --with-icon-name option
@@ -508,6 +511,7 @@ AcSplit/CF_WITH_SYSMOUSE        check for FreeBSD sysmouse (ncurses)
 AcSplit/CF_WITH_SYSTYPE         the --with-systype option, works for mockups (compare with --host)
 AcSplit/CF_WITH_VALGRIND        configure --with-valgrind
 AcSplit/CF_WITH_VALUE           wrapper for AC_WITH_VALUE to ensure it gets a value
+AcSplit/CF_WITH_VERSIONED_SYMS  option --with-versioned-syms
 AcSplit/CF_WITH_WARNINGS        make option for gcc warnings
 AcSplit/CF_WITH_XPM             configure --with-xpm option, used in vile
 AcSplit/CF_WITH_X_APP_DEFAULTS  option for getting X's app-defaults directory
